# Argus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: AGENTS.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base_agent.py  builder.py  graph.py  planner.py  reviewer.py  router.py  state.py  tester.py  ui_agent.py
backend/app/api/: contracts.py  models_router.py  projects.py  providers.py  sessions.py  websocket.py
backend/app/core/: llm_factory.py
backend/app/db/: database.py  repositories.py
backend/app/providers/: adapters.py  protocol.py  scripted.py
backend/app/schemas/: __init__.py  coordinator_actions.py  events.py  project.py  provider.py  session.py  session_commands.py  session_events.py  session_store.py
backend/app/services/: __init__.py  command_processor.py  coordinator_cycle.py  participant_instruction_service.py  session_configuration_service.py  workspace_service.py
backend/app/tools/: file_tools.py  git_tools.py  scoped_tools.py  search_tools.py  shell_tools.py
backend/app/workers/: context.py  context_audit.py  task_pool.py
backend/scripts/: export_contracts.py
backend/tests/: __init__.py  conftest.py  test_test_harness.py
backend/tests/api/: test_projects.py
backend/tests/benchmarks/: __init__.py  test_fixture_contracts.py
backend/tests/db/: __init__.py  test_migrations_and_repositories.py
backend/tests/helpers/: __init__.py  fakes.py
backend/tests/providers/: test_provider_runtime.py
backend/tests/schemas/: test_session_contracts.py
backend/tests/services/: test_coordinator_cycle.py  test_event_store_and_command_processor.py  test_session_configuration_service.py  test_workspace_service.py
backend/tests/workers/: test_context.py
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  sidecar.rs
(+218 files in other folders)
