[project]
name = "argus-backend"
version = "0.1.0"
description = "Argus Multi-Agent Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=1.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "websockets>=14.0",
    "cryptography>=44.0.0",
    "ripgrepy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
